--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
             <version>7.7.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>2.21.1</version> <!-- Ensure this matches your Log4j2 version -->
+        </dependency>
 
         <!-- WebJars -->
         <dependency>
