Established Websocket Server and Client Connection and communication

--- a/nexus-agent/src/main/resources/application.properties
+++ b/nexus-agent/src/main/resources/application.properties
@@ -7,7 +7,7 @@ app.admin.password=system
 app.user.login.module=false
 
 # Core Spring and Framework
-server.port=9000
+server.port=9001
 spring.http.converters.preferred-json-mapper=gson
 
 # Session
@@ -21,7 +21,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 #DataBase
-spring.datasource.url=jdbc:h2:file:~/jpadb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:file:~/agentDB;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
