--- a/nexus-agent/pom.xml
+++ b/nexus-agent/pom.xml
@@ -13,7 +13,18 @@
     <artifactId>nexus-agent</artifactId>
     <packaging>jar</packaging>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-api</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.tyrus.bundles</groupId>
+            <artifactId>tyrus-standalone-client</artifactId>
+            <version>1.17</version> <!-- This version is stable with Java 17+ -->
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
