--- a/nexus/pom.xml
+++ b/nexus/pom.xml
@@ -14,6 +14,13 @@
     <artifactId>nexus</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
